mro: MicrosoftML pre-trained models fixes (r-mrclient-mlm)

--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -1226,12 +1226,20 @@ outputs:
   - name: r-mrclient-mml  # [linux or win]
     version: {{ rc_version }}  # [linux or win]
     script: install-r-mrclient-mml.sh  # [linux or win]
-    build:  # [linux or win]
+    build:  # [linux]
+      missing_dso_whitelist:  # [linux]
+        - liblttng-ust.so.0  # [linux]
     requirements:  # [linux or win]
       host:  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-mrclient', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-      run:  # [linux or win]
+        - zlib  # [linux]
+        - libgcc-ng  # [linux]
+        - libstdcxx-ng  # [linux]
+        - libuuid  # [linux]
+        - krb5  # [linux]
+        - libcurl  # [linux]
+      run:
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-mrclient', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - zlib 1.2.*  # [linux]
@@ -1239,10 +1247,11 @@ outputs:
         - libstdcxx-ng >=7.2.0  # [linux]
         - libuuid >=1.0.3  # [linux]
         - krb5 1.14.*  # [linux]
-    test:
-      commands:
+        - libcurl >=7.55.1  # [linux]
+    test:  # [linux or win]
+      commands:  # [linux or win]
         # You can put additional test commands to be run here.
-        - $R -e "library('MicrosoftML')"           # [not win]
+        - $R -e "library('MicrosoftML')"           # [linux]
         - "\"%R%\" -e \"library('MicrosoftML')\""  # [win]
     about:  # [linux or win]
       home: https://docs.microsoft.com/en-us/machine-learning-server/r-reference/microsoftml/microsoftml-package  # [linux or win]
