Attempt to cleanup mro-base deps

--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -100,29 +100,20 @@ outputs:
         - {{ cdt('libxau') }}                # [linux]
         - {{ cdt('java-1.7.0-openjdk') }}    # [linux]
       host:
-        - libgfortran >=3.0.1  # [osx]
-        - llvm-openmp >=4.0.1  # [osx]
         - expat  # [osx]
-        - libcurl >=7.55.1  # [osx]
+        - libcurl  # [osx]
         - libiconv  # [osx]
         - ncurses  # [osx]
-        - libgcc-ng >=7.2.0  # [linux]
-        - zlib 1.2.*  # [linux]
-        - libgfortran-ng >=7.2.0 # [linux]
-        - pango 1.40.*  # [linux]
-        - cairo 1.14.*  # [linux]
-        - glib 2.*  # [linux]
+        - zlib  # [linux]
+        - pango  # [linux]
+        - cairo  # [linux]
+        - glib  # [linux]
       run:
         - _r-mutex 1.* mro_2
         - {{ compiler('fortran') }}  # [not win]
         - {{ compiler('cxx') }}  # [not win]
         - {{ compiler('c') }}  # [not win]
-        - libgfortran >=3.0.1  # [osx]
-        - llvm-openmp >=4.0.1  # [osx]
         - curl >=7.55.1  # [not win]
-        - pango 1.*             # [linux]
-        - cairo 1.14.*  # [linux]
-        - glib 2.*  # [linux]
       test:
         commands:
           - $R -e "print('Hello World!')"           # [not win]
