mro: More removal of unnecessary deps

--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -1164,9 +1164,9 @@ outputs:
         - {{ pin_subpackage('r-revomods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
-        - libcurl >=7.55.1  # [linux]
-        - libuuid >=1.0.3  # [linux]
-        - zlib 1.2.*  # [linux]
+        - libcurl  # [linux]
+        - libuuid  # [linux]
+        - zlib  # [linux]
         - unixodbc  # [linux]
         - openssl  # [linux]
       run:  # [linux or win]
@@ -1186,10 +1186,6 @@ outputs:
         - mro-base {{ version }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
-        - libcurl >=7.55.1  # [linux]
-        - libuuid >=1.0.3  # [linux]
-        - zlib 1.2.*  # [linux]
-        - unixodbc  # [linux]
     test:  # [linux or win]
       files:  # [linux or win]
         - Flight_Delays_Sample.csv  # [linux or win]
@@ -1218,20 +1214,16 @@ outputs:
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-mrclient', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - zlib  # [linux]
-        - libgcc-ng  # [linux]
-        - libstdcxx-ng  # [linux]
+        - libstdcxx-ng >=7.2.0  # [linux]
+        - libgcc-ng >=7.2.0  # [linux]
         - libuuid  # [linux]
         - krb5  # [linux]
         - libcurl  # [linux]
       run:
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-mrclient', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - zlib 1.2.*  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libstdcxx-ng >=7.2.0  # [linux]
-        - libuuid >=1.0.3  # [linux]
-        - krb5 1.14.*  # [linux]
-        - libcurl >=7.55.1  # [linux]
     test:  # [linux or win]
       commands:  # [linux or win]
         # You can put additional test commands to be run here.
