r-essentials / r-recommended: Move mro-basics to r-recommended
.. so that it gets pulled in all the time

--- a/r-recommended-feedstock/recipe/meta.yaml
+++ b/r-recommended-feedstock/recipe/meta.yaml
@@ -10,9 +10,10 @@ build:
 
 requirements:
   build:
-    - mro-base
+    - mro-base {{ version }}
   run:
-    - mro-base
+    - mro-base {{ version }}
+    - mro-basics {{ version }}
     - r-boot
     - r-class
     - r-cluster
