mro: Use new RevoUtils 10.0.8

--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -49,9 +49,15 @@ source:
     folder: wix                                                                              # [win64]
   # The normal RevoUtils looks in the Windows Registry to determine if it's the Client or the Server version.
   # We do not write to the Windows Registry so were provided with this one instead.
-  - url: ./RevoUtils_10.0.8.zip                                                              # [win64]
+  - url: ./RevoUtils_Windows_10.0.8.zip                                                      # [win64]
     sha256: b0b4fd446fe4251f0962066aba8623da4bbfb682616188b0f4792ec0e05fdb7e                 # [win64]
     folder: RevoUtils                                                                        # [win64]
+  - url: ./RevoUtils_Linux_10.0.8.tar.gz                                                     # [linux64]
+    sha256: 10b8d1aca460ae345c4194591ac3aa215947b47ddfd93a3a0bd2aa24b377eb60                 # [linux64]
+    folder: RevoUtils                                                                        # [linux64]
+  - url: ./RevoUtils_Mac_10.0.8.tar.gz                                                       # [osx]
+    sha256: 04fb3dc63e56042b27a0e08751a5eb497628fe045d0b0d326b9c48ccc297c551                 # [osx]
+    folder: RevoUtils                                                                        # [osx]
 
 requirements:
   build:
