--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -1,6 +1,10 @@
 cran_mirror:
   - https://mran.microsoft.com/snapshot/2018-01-01
 target_platform:
-  # - win-64
-  # - osx-64
-  - linux-64
+  - win-64  # [win]
+  - osx-64  # [osx]
+  - linux-64  # [linux]
+python:
+  - 2.7
+  - 3.5
+  - 3.6
