--- a/r-pbdzmq-feedstock/recipe/meta.yaml
+++ b/r-pbdzmq-feedstock/recipe/meta.yaml
@@ -27,7 +27,7 @@ source:
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
-  number: 0
+  number: 1  # [linux]
 
 
   # This is required to make R link correctly on Linux.
